# OpenAgentFlow

./: .env.example  COMMERCIAL.md  COMMUNITY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  deploy.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  run.py  run_examples.sh  simple_run.sh
.github/workflows/: ci.yml
backend/: __init__.py  database.py  server.py
backend/agent/: base.py
backend/api/: __init__.py  agents.py  plugins.py  workflows.py
backend/plugins/: __init__.py
backend/tools/: dingtalk.py  feishu.py  wecom.py
backend/workflow/: engine.py
docs/: GETTING_STARTED.md  api-documentation.md  api-reference.md  architecture.md  deployment-guide.md  development-guide.md  index.html  plugin-development.md  user-guide.md
examples/: advanced_workflow.py  simple_agents.py
frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: WorkflowContext.tsx
frontend/src/pages/: WorkflowEditor.tsx
plugins/: __init__.py  ml_plugin.py  slack_plugin.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: __init__.py
tests/api/: test_api_endpoints.py
tests/unit/: test_agents.py  test_workflow.py
